crates/rig-derive/tests/ui/tool_context/fail_context_in_params.stderr
error: `ToolContext` is host-only and cannot be listed in `params(...)` or `required(...)`
 --> tests/ui/tool_context/fail_context_in_params.rs:6:19
  |
6 | #[rig_tool(params(context = "host context"))]
  |                   ^^^^^^^
